// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectInputField > should display right value on grouped options 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_gqqb10"
      >
        <div
          aria-controls="_r_12_"
          aria-describedby="_r_12_"
          class="uv_pjfil59 uv_pjfil5b"
          tabindex="-1"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935j"
          >
            <div
              aria-controls="_r_12_"
              aria-expanded="true"
              class="uv_y472cy6 uv_y472cy5 uv_y472cy8 uv_y472cya uv_y472cye uv_y472cyg"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_10_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_y472cym uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
              >
                Mercury
              </span>
              <div
                class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="uv_gk9hqs1 uv_pjfil54"
            id="_r_12_"
            role="dialog"
            style="--uv_1meq2bv0: -5px; --uv_1meq2bv1: 0px; --uv_1meq2bv2: rotate(180deg); --uv_1meq2bv4: translate3d(0px, 4px, 0); --uv_1meq2bv5: 0ms; --uv_1meq2bv6: translate3d(0px, 4px, 0); --uv_1meq2bv7: 100%; --uv_gk9hqs0: 100%; opacity: 1;"
          >
            <div
              class="uv_pjfil52"
            >
              <div
                class="uv_mxir930 uv_mxir932d"
              >
                <div
                  class="uv_gk9hqsr uv_17syp631 uv_mxir930 uv_mxir932d uv_mxir935j"
                >
                  <div
                    class="uv_dk0fjs8 uv_dk0fjs6"
                    data-disabled="false"
                    data-error="false"
                    data-readonly="false"
                    data-success="false"
                  >
                    <div
                      class="uv_dk0fjs1 uv_mxir930 uv_mxir93d uv_mxir932j"
                      data-size="medium"
                    >
                      <svg
                        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <title>
                          SearchIcon
                        </title>
                        <path
                          clip-rule="evenodd"
                          d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <input
                      aria-invalid="false"
                      aria-label="search-bar"
                      class="uv_dk0fjs9"
                      data-size="medium"
                      data-testid="search-bar"
                      id="_r_2s_"
                      placeholder="Search in list"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="uv_gk9hqs2 uv_mxir930 uv_mxir932d"
                  data-grouped="true"
                  id="select-dropdown"
                  role="listbox"
                >
                  <div
                    class="uv_gk9hqs8 uv_mxir930 uv_mxir932d uv_mxir935d"
                  >
                    <div
                      class="uv_gk9hqs9"
                    >
                      <button
                        class="uv_gk9hqs3"
                        data-selectgroup="false"
                        data-testid="group-0"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                          style="--uv_1eu8od80: left;"
                        >
                          JOVIAN PLANETS
                        </span>
                      </button>
                    </div>
                    <div
                      class="uv_mxir930 uv_mxir932d uv_mxir935d"
                      id="items"
                    >
                      <div
                        aria-disabled="false"
                        aria-label="jupiter"
                        aria-selected="false"
                        class="uv_gk9hqsc uv_gk9hqsb uv_gk9hqsa uv_gk9hqse"
                        data-testid="option-jupiter"
                        id="option-0"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_mxir930 uv_mxir931 uv_mxir932d uv_mxir935j"
                          data-testid="option-stack-jupiter"
                        >
                          <div
                            class="uv_gk9hqsq uv_mxir930 uv_mxir93v uv_mxir932j uv_mxir935j uv_mxir9377"
                          >
                            <span
                              class="uv_gk9hqsp uv_1yhcak80 uv_1yhcak84 uv_1yhcak8j uv_1yhcak81a"
                              style="--uv_1eu8od80: left;"
                            >
                              Jupiter
                            </span>
                          </div>
                          <span
                            class="uv_1yhcak80 uv_1yhcak87 uv_1yhcak8b uv_1yhcak8k uv_1yhcak81d uv_1yhcak835"
                            style="--uv_1eu8od80: left;"
                          >
                            Jupiter is the fifth planet from the Sun and the largest in the Solar System. It is a gas giant with a mass more than two and a half times that of all the other planets in the Solar System combined, and slightly less than one one-thousandth the mass of the Sun.
                          </span>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="saturn"
                        aria-selected="false"
                        class="uv_gk9hqsc uv_gk9hqsb uv_gk9hqsa uv_gk9hqse"
                        data-testid="option-saturn"
                        id="option-1"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_mxir930 uv_mxir931 uv_mxir932d uv_mxir935j"
                          data-testid="option-stack-saturn"
                        >
                          <div
                            class="uv_gk9hqsq uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935j uv_mxir9377"
                          >
                            <span
                              class="uv_gk9hqsp uv_1yhcak80 uv_1yhcak84 uv_1yhcak8j uv_1yhcak81a"
                              style="--uv_1eu8od80: left;"
                            >
                              Saturn
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="uranus"
                        aria-selected="false"
                        class="uv_gk9hqsc uv_gk9hqsb uv_gk9hqsa uv_gk9hqse"
                        data-testid="option-uranus"
                        id="option-2"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_mxir930 uv_mxir931 uv_mxir932d uv_mxir935j"
                          data-testid="option-stack-uranus"
                        >
                          <div
                            class="uv_gk9hqsq uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935j uv_mxir9377"
                          >
                            <span
                              class="uv_gk9hqsp uv_1yhcak80 uv_1yhcak84 uv_1yhcak8j uv_1yhcak81a"
                              style="--uv_1eu8od80: left;"
                            >
                              Uranus
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="neptune"
                        aria-selected="false"
                        class="uv_gk9hqsc uv_gk9hqsb uv_gk9hqsa uv_gk9hqse"
                        data-testid="option-neptune"
                        id="option-3"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_mxir930 uv_mxir931 uv_mxir932d uv_mxir935j"
                          data-testid="option-stack-neptune"
                        >
                          <div
                            class="uv_gk9hqsq uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935j uv_mxir9377"
                          >
                            <span
                              class="uv_gk9hqsp uv_1yhcak80 uv_1yhcak84 uv_1yhcak8j uv_1yhcak81a"
                              style="--uv_1eu8od80: left;"
                            >
                              Neptune
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="uv_gk9hqs8 uv_mxir930 uv_mxir932d uv_mxir935d"
                  >
                    <div
                      class="uv_gk9hqs9"
                    >
                      <button
                        class="uv_gk9hqs3"
                        data-selectgroup="false"
                        data-testid="group-1"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8p uv_1yhcak81a uv_1yhcak832"
                          style="--uv_1eu8od80: left;"
                        >
                          TERRESTRIAL PLANETS
                        </span>
                      </button>
                    </div>
                    <div
                      class="uv_mxir930 uv_mxir932d uv_mxir935d"
                      id="items"
                    >
                      <div
                        aria-disabled="false"
                        aria-label="mercury"
                        aria-selected="true"
                        class="uv_gk9hqsc uv_gk9hqsb uv_gk9hqsa uv_gk9hqsd uv_gk9hqse"
                        data-testid="option-mercury"
                        id="option-0"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_mxir930 uv_mxir931 uv_mxir932d uv_mxir935j"
                          data-testid="option-stack-mercury"
                        >
                          <div
                            class="uv_gk9hqsq uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935j uv_mxir9377"
                          >
                            <span
                              class="uv_gk9hqsp uv_1yhcak80 uv_1yhcak84 uv_1yhcak8j uv_1yhcak81a"
                              style="--uv_1eu8od80: left;"
                            >
                              Mercury
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="venus"
                        aria-selected="false"
                        class="uv_gk9hqsc uv_gk9hqsb uv_gk9hqsa uv_gk9hqse"
                        data-testid="option-venus"
                        id="option-1"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_mxir930 uv_mxir931 uv_mxir932d uv_mxir935j"
                          data-testid="option-stack-venus"
                        >
                          <div
                            class="uv_gk9hqsq uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935j uv_mxir9377"
                          >
                            <span
                              class="uv_gk9hqsp uv_1yhcak80 uv_1yhcak84 uv_1yhcak8j uv_1yhcak81a"
                              style="--uv_1eu8od80: left;"
                            >
                              Venus
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="earth"
                        aria-selected="false"
                        class="uv_gk9hqsc uv_gk9hqsb uv_gk9hqsa uv_gk9hqse"
                        data-testid="option-earth"
                        id="option-2"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_mxir930 uv_mxir931 uv_mxir932d uv_mxir935j"
                          data-testid="option-stack-earth"
                        >
                          <div
                            class="uv_gk9hqsq uv_mxir930 uv_mxir93v uv_mxir932j uv_mxir935j uv_mxir9377"
                          >
                            <span
                              class="uv_gk9hqsp uv_1yhcak80 uv_1yhcak84 uv_1yhcak8j uv_1yhcak81a"
                              style="--uv_1eu8od80: left;"
                            >
                              Earth
                            </span>
                          </div>
                          <span
                            class="uv_1yhcak80 uv_1yhcak87 uv_1yhcak8b uv_1yhcak8k uv_1yhcak81d uv_1yhcak835"
                            style="--uv_1eu8od80: left;"
                          >
                            Our home planet
                          </span>
                        </div>
                      </div>
                      <div
                        aria-disabled="true"
                        aria-label="mars"
                        aria-selected="false"
                        class="uv_gk9hqsc uv_gk9hqsb uv_gk9hqsa uv_gk9hqsh uv_gk9hqse"
                        data-testid="option-mars"
                        id="option-3"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_mxir930 uv_mxir931 uv_mxir932d uv_mxir935j"
                          data-testid="option-stack-mars"
                        >
                          <div
                            class="uv_gk9hqsq uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935j uv_mxir9377"
                          >
                            <span
                              class="uv_gk9hqsp uv_1yhcak80 uv_1yhcak84 uv_1yhcak8j uv_1yhcak81a"
                              style="--uv_1eu8od80: left;"
                            >
                              Mars
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="pluto"
                        aria-selected="false"
                        class="uv_gk9hqsc uv_gk9hqsb uv_gk9hqsa uv_gk9hqse"
                        data-testid="option-pluto"
                        id="option-4"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_mxir930 uv_mxir931 uv_mxir932d uv_mxir935j"
                          data-testid="option-stack-pluto"
                        >
                          <div
                            class="uv_gk9hqsq uv_mxir930 uv_mxir93v uv_mxir932j uv_mxir935j uv_mxir9377"
                          >
                            <span
                              class="uv_gk9hqsp uv_1yhcak80 uv_1yhcak84 uv_1yhcak8j uv_1yhcak81a"
                              style="--uv_1eu8od80: left;"
                            >
                              Pluto
                            </span>
                          </div>
                          <span
                            class="uv_1yhcak80 uv_1yhcak87 uv_1yhcak8b uv_1yhcak8k uv_1yhcak81d uv_1yhcak835"
                            style="--uv_1eu8od80: left;"
                          >
                            Pluto does not fit the usual classification of either terrestrial or Jovian planets, but is rocky
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_gqqb10"
      >
        <div
          aria-controls="_r_2_"
          aria-describedby="_r_2_"
          class="uv_pjfil59 uv_pjfil5b"
          tabindex="-1"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935j"
          >
            <div
              aria-controls="_r_2_"
              aria-expanded="false"
              class="uv_y472cy6 uv_y472cy5 uv_y472cya uv_y472cye"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_0_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_y472cy4 uv_1yhcak80 uv_1yhcak87 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81d uv_1yhcak835"
                style="--uv_1eu8od81: nowrap;"
              >
                Select item
              </span>
              <div
                class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_gqqb10"
      >
        <div
          aria-controls="_r_a_"
          aria-describedby="_r_a_"
          class="uv_pjfil59 uv_pjfil5b"
          tabindex="-1"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935j"
          >
            <div
              aria-controls="_r_a_"
              aria-expanded="false"
              class="uv_y472cy6 uv_y472cy5 uv_y472cy7 uv_y472cya uv_y472cye"
              data-disabled="true"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_8_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_y472cy4 uv_1yhcak80 uv_1yhcak81 uv_1yhcak87 uv_1yhcak8b uv_1yhcak8j uv_1yhcak825"
                style="--uv_1eu8od81: nowrap;"
              >
                Select item
              </span>
              <div
                class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly grouped 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_gqqb10"
      >
        <div
          aria-controls="_r_q_"
          aria-describedby="_r_q_"
          class="uv_pjfil59 uv_pjfil5b"
          tabindex="-1"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935j"
          >
            <div
              aria-controls="_r_q_"
              aria-expanded="false"
              class="uv_y472cy6 uv_y472cy5 uv_y472cya uv_y472cye"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_o_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_y472cy4 uv_1yhcak80 uv_1yhcak87 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81d uv_1yhcak835"
                style="--uv_1eu8od81: nowrap;"
              >
                Select item
              </span>
              <div
                class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly multiselect 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_gqqb10"
      >
        <div
          aria-controls="_r_i_"
          aria-describedby="_r_i_"
          class="uv_pjfil59 uv_pjfil5b"
          tabindex="-1"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935j"
          >
            <div
              aria-controls="_r_i_"
              aria-expanded="false"
              class="uv_y472cy6 uv_y472cy5 uv_y472cya uv_y472cye"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_g_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_y472cy4 uv_1yhcak80 uv_1yhcak87 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81d uv_1yhcak835"
                style="--uv_1eu8od81: nowrap;"
              >
                Select item
              </span>
              <div
                class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should trigger events 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_gqqb10"
      >
        <div
          aria-controls="_r_4g_"
          aria-describedby="_r_4g_"
          class="uv_pjfil59 uv_pjfil5b"
          tabindex="-1"
        >
          <div
            class="uv_mxir930 uv_mxir932d uv_mxir935j"
          >
            <div
              aria-controls="_r_4g_"
              aria-expanded="false"
              class="uv_y472cy6 uv_y472cy5 uv_y472cya uv_y472cye"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_4e_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_y472cym uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
              >
                Mercury
              </span>
              <div
                class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
              >
                <svg
                  aria-label="show dropdown"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    ArrowDownIcon
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
